# GnuplotTracer

./: .travis.yml  CMakeLists.txt  README.md
include/: gptBound.hpp  gptTracer.hpp  gptValue.hpp
src/: gptTracer.cpp
tests/: CMakeLists.txt  main.cpp
